--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <%= stylesheet_link_tag "loginpage", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "new", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "categories-form", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "categories-show", "data-turbo-track": "reload" %>
     <link rel="stylesheet" href="link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.min.css">
     <link href="https://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
   </head>
