--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Edit Category</h1>
+
+<div class="new-category-div">
+<h1 class="new-category-h1">Edit Category</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @category %> |
+<br>
+<%= link_to 'Show', @category %> 
 <%= link_to 'Back', categories_path %>
+
+</div>
