--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,37 +1,36 @@
 <!-- app/views/categories/index.html.erb -->
-<div class="categories-index">
+
+<div class="categories-index-div">
   <h1 class="categories-index-h1">My Tasks</h1>
-
-  <% if @categories.any? %>
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th class="action">Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @categories.each do |category| %>
-          <tr>
-            <td><%= link_to category.name, category %></td>
-            <td class="action">
-              <%= link_to 'Show', category %>
-              <%= link_to 'Edit', edit_category_path(category) %>
-              <%= button_to 'Delete', category, method: :delete %>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  <% else %>
-    <p>You have no category created.</p>
-  <% end %>
-
-  <br>
-  <br>
   <div class="view-task-new-category-div">
     <%= link_to 'View All Tasks', show_joined_table_categories_path, method: :get, class: "view-task-new-category" %>
     <%= link_to 'New Category', new_category_path, class: "view-task-new-category"  %>
+  </div>
+  <br/>
+  <div class="categories-index">
+    <div class="categories-name-div">
+      <% if @categories.any? %>
+        <div class="categories-row">
+          <% @categories.each do |category| %>
+            <div class="category-item">
+            <table >
+            <tbody class="category-actions-div">
+              <tr>
+                <td><%= link_to category.name, category %></td>
+              </tr>
+              <tr class="category-actions">
+                <td ><%= link_to 'Edit', edit_category_path(category), class: "category-actions-link" %></td>
+                <td class="category-actions-link"><%= button_to 'Delete', category, method: :delete, class: "category-actions-link" %></td>
+              </tr>
+            </tbody>
+          </table>
+            </div>
+          <% end %>
+        </div>
+      <% else %>
+        <p>You have no category created.</p>
+      <% end %>
+    </div>
   </div>
   <br>
 </div>
