--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <!-- app/views/categories/show.html.erb -->
-
-<h1>Categories</h1>
-<h1><%= @category.name %></h1>
+<div class="categories-show">
+<h1 class="categories-show-h1">Categories</h1>
+<h1 class="categories-show-h1-name"><%= @category.name %></h1>
 
 <% if @category.taskapps.present? %>
   <%= render partial: 'taskapps/index', locals: { category: @category } %>
@@ -14,3 +14,4 @@
 <%= link_to 'Back', categories_path %>
 
 
+</div>
