--- a/app/views/categories/view-all.html.erb
+++ b/app/views/categories/view-all.html.erb
@@ -1,14 +1,15 @@
 <!-- app/views/categories/view-all.html.erb -->
+<div class="view-all-div">
 <h1>All Tasks</h1>
 
 <%= form_with(url: show_joined_table_categories_path, method: :get) do %>
   <div class="form-group">
     <%= label_tag 'due_date', 'Filter by Due Date:' %>
     <%= text_field_tag 'due_date', params[:due_date], class: 'form-control', type: 'date' %>
-  </div>
   <%= submit_tag 'Filter', class: 'btn btn-primary' %>
+  </div>
+<br/>
 <% end %>
-
 <% if @categories_and_taskapps.present? %>
   <table class="table">
     <thead>
@@ -35,5 +36,6 @@
 <% else %>
   <p>No tasks available for this category.</p>
 <% end %>
-
+<br/>
 <%= link_to 'Back', categories_path %>
+</div>
