added styles to app

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -13,7 +13,7 @@
 
     <div class="field">
       <%= form.label :name, class: "categories-form-label" %>
-      <%= form.text_field :name, id: :category_name, class: "categories-form-label" %>
+      <%= form.text_field :name, id: :category_name, class: "categories-form-label", required: true %>
     </div>
     <br>
     <div class="actions">
