--- a/app/views/taskapps/_index.html.erb
+++ b/app/views/taskapps/_index.html.erb
@@ -1,9 +1,9 @@
 <!-- app/views/taskapps/_index.html.erb -->
 <div class="taskapp-index-container">
-<table class="table">
+<table class="taskapp-table">
   <thead>
     <tr class="taskapp-tr">
-      <th class="taskapp-th">Title</th>
+      <th class="taskapp-th taskapp-th-title">Title</th>
       <th class="taskapp-th">Status</th>
       <th class="taskapp-th">Due Date</th>
       <th class="taskapp-th">Action</th>
@@ -15,7 +15,7 @@
         <td class="taskapp-td"><%= taskapp.title %></td>
         <td class="taskapp-td"><%= taskapp.status %></td>
         <td class="taskapp-td"><%= taskapp.due_date %></td>
-        <td class="taskapp-action taskapp-action-div">
+        <td class="taskapp-td taskapp-action-div">
           <%= link_to 'Show', category_taskapp_path(@category, taskapp) %>
           <%= link_to 'Edit', edit_category_taskapp_path(@category, taskapp) %>
           <%= button_to 'Delete', category_taskapp_path(@category, taskapp), method: :delete, data: { confirm: 'Are you sure?' } %>
