--- a/app/views/taskapps/edit.html.erb
+++ b/app/views/taskapps/edit.html.erb
@@ -1,5 +1,6 @@
 <!-- app/views/taskapps/_edit.html.erb -->
-<h1>Edit Taskapp</h1>
+<div class="taskapp-edit-div">
+<h1>Edit</h1>
 
 <%= render 'form' %>
 
@@ -9,3 +10,4 @@
 <% else %>
   <p>Taskapp not found.</p>
 <% end %>
+</div>
