--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -9,10 +9,14 @@
 }
 
 .login {
+    position: absolute;
+    top: 1%;
+    right: 2%;
+    left: 70%;
     display: flex;
     flex-direction: row;
     gap: 10px;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
     color: black;
 }
@@ -22,8 +26,7 @@ a {
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-                                                
+    font-family: 'Poppins', sans-serif;                                        
 }
 
 .notice {
@@ -51,11 +54,12 @@ body {
 }
 
 .logout, .profile {
-    font-size: 14px;
-    border-radius: 5px;
-    background-color: rgb(80, 26, 80);
+    font-size: 20px;
+    border-radius: 20px;
+    background-color: rgb(65, 49, 64);
     color: white;
-    padding: 5px 10px 5px 10px ;
-    border: none;
     box-shadow: 2px 2px 2px rgb(104, 102, 102);
+    padding: 10px 20px;
+    width: 200px;
+
 }
