--- a/app/assets/stylesheets/taskapp-index.css
+++ b/app/assets/stylesheets/taskapp-index.css
@@ -1,9 +1,9 @@
-.table, .taskapp-td, .taskapp-tr, .taskapp-th, .taskapp-action {
+.taskapp-table, .taskapp-td, .taskapp-tr, .taskapp-th, .taskapp-action {
     border: 1px solid black;
 }
 
-.taskapp-action, .taskapp-td {
-    width: 150px;
+.taskapp-td {
+    width: 200px;
     text-align: center;
     gap: 5px;
 }
@@ -13,6 +13,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 5px;
 }
 
 .taskapp-index-container {
@@ -22,4 +23,9 @@
     align-items: center;
     max-width: 100%;
     width: 1000px;
+}
+
+.taskapp-th {
+    background-color: rgb(39, 35, 35);
+    color: rgb(243, 234, 234);
 }
