--- a/app/assets/stylesheets/categories-index.css
+++ b/app/assets/stylesheets/categories-index.css
@@ -1,4 +1,8 @@
 .categories-index-div {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%,10%);
     display: flex;
     flex-direction: column;
     justify-content: center;
