--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -10,12 +10,12 @@
 
 .login {
     position: absolute;
-    top: 1%;
+    top: 3%;
     right: 2%;
     left: 70%;
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 30px;
     justify-content: center;
     align-items: center;
     color: black;
@@ -61,5 +61,23 @@ body {
     box-shadow: 2px 2px 2px rgb(104, 102, 102);
     padding: 10px 20px;
     width: 200px;
+}
 
+.login-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100px;
+    background-color: rgb(34, 8, 68);
+}
+
+.login-header-h1 {
+    position: fixed;
+    top: 1%;
+    left: 2%;
+    text-shadow: 2px 2px 5px rgb(56, 53, 53);
+    font-size: 40px;
+    color: rgb(238, 226, 226);
 }
