--- a/app/assets/stylesheets/categories-index.css
+++ b/app/assets/stylesheets/categories-index.css
@@ -41,7 +41,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 850px;
+    width: 1000px;
+    height: auto;
   }
   
   .no-category {
@@ -72,6 +73,7 @@
     justify-content: center;
     align-items: center;
     border: 1px solid gray;
+    box-shadow: 2px 2px 5px gray;
     border-radius: 5px;
     padding: 10px;
   }
@@ -82,4 +84,9 @@
   
   .category-actions-link {
     background-color: none;
+  }
+
+  a.category-name {
+    color: black;
+    font-weight: 800;
   }
