add styles to app

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+
+<div class="signup-div">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -24,4 +26,9 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+<div class="have-account-div">
+<p class="have-account"> Already have account?</p>
 <%= render "devise/shared/links" %>
+</div>
+<br/>
+</div>
