--- a/app/assets/stylesheets/loginpage.css
+++ b/app/assets/stylesheets/loginpage.css
@@ -91,3 +91,23 @@ a.login-create {
     right: 45%;
 }
 
+.login-border {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 10px;
+    background-color: rgb(34, 8, 68);
+    z-index: 1;
+}
+
+
+.login-border-1 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100px;
+    background-color: rgb(34, 8, 68);
+    z-index: 1;
+}
