--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,9 @@
           <h1 class="login-header-h1">iQuest</h1>
         </div>
         <div class="login">
-          <%= button_to "Profile", edit_user_registration_path, class: "profile" %>
+          <%= link_to "Profile", edit_user_registration_path, class: "profile" %>
           <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "logout" %>
+        </div>
       <% end %>
     </div>
     
