--- a/app/views/taskapps/_form.html.erb
+++ b/app/views/taskapps/_form.html.erb
@@ -14,6 +14,8 @@
     </div>
   <% end %>
 
+  <%= form.hidden_field :category_id, value: @category.id %>
+
   <div class="field">
     <%= form.label :title, class: "taskapp-form-label" %>
     <%= form.text_field :title, required: true %>
