--- a/app/assets/stylesheets/loginpage.css
+++ b/app/assets/stylesheets/loginpage.css
@@ -111,3 +111,9 @@ a.login-create {
     background-color: rgb(34, 8, 68);
     z-index: 1;
 }
+
+
+.nav-bar {
+    position: fixed;
+    z-index: 1000;
+}
