--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -20,7 +20,7 @@
               </tr>
               <tr class="category-actions">
                 <td ><%= link_to 'Edit', edit_category_path(category), class: "category-actions-link" %></td>
-                <td class="category-actions-link"><%= button_to 'Delete', category, method: :delete, class: "category-actions-link" %></td>
+                <td ><%= button_to 'Delete', category, method: :delete, class: "category-actions-link" %></td>
               </tr>
             </tbody>
           </table>
