--- a/app/views/taskapps/_index.html.erb
+++ b/app/views/taskapps/_index.html.erb
@@ -16,9 +16,9 @@
         <td class="taskapp-td"><%= taskapp.status %></td>
         <td class="taskapp-td"><%= taskapp.due_date %></td>
         <td class="taskapp-td taskapp-action-div">
-          <%= link_to 'Show', category_taskapp_path(@category, taskapp) %>
-          <%= link_to 'Edit', edit_category_taskapp_path(@category, taskapp) %>
-          <%= button_to 'Delete', category_taskapp_path(@category, taskapp), method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to 'Show', category_taskapp_path(@category, taskapp), class: "taskapp-action-link" %>
+          <%= link_to 'Edit', edit_category_taskapp_path(@category, taskapp), class: "taskapp-action-link" %>
+          <%= button_to 'Delete', category_taskapp_path(@category, taskapp), method: :delete, class: "taskapp-action-link taskapp-action-delete" %>
         </td>
       </tr>
     <% end %>
