add styles to app

--- a/app/views/categories/view-all.html.erb
+++ b/app/views/categories/view-all.html.erb
@@ -6,7 +6,7 @@
   <div class="form-group">
     <%= label_tag 'due_date', 'Filter by Due Date:' %>
     <%= text_field_tag 'due_date', params[:due_date], class: 'form-control', type: 'date' %>
-  <%= submit_tag 'Filter', class: 'btn btn-primary' %>
+  <%= submit_tag 'Filter', class: 'view-all-filter' %>
   </div>
 <br/>
 <% end %>
