--- a/app/assets/stylesheets/categories-index.css
+++ b/app/assets/stylesheets/categories-index.css
@@ -80,13 +80,21 @@
     border-radius: 5px;
     padding: 10px;
   }
+
+  .category-actions-div:hover {
+    background-color: rgb(87, 23, 87);
+    color: white;
+  }
   
   a.category-actions-link {
     color: black;
   }
+
+  a.category-actions-link:hover, a.category-name:hover, .category-action-delete:hover {
+    color: white;
+  }
   
   button.category-actions-link {
-    background-color: white;
     border: none;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;    
@@ -95,4 +103,8 @@
   a.category-name {
     color: black;
     font-weight: 800;
+  }
+  
+  .category-action-delete {
+    background-color: inherit;
   }
