--- a/app/assets/stylesheets/taskapp-form.css
+++ b/app/assets/stylesheets/taskapp-form.css
@@ -20,13 +20,14 @@
 }
 
 .taskapp-form-submit {
-    background-color: gray;
+    background-color: rgb(97, 17, 117);
     border-radius: 5px;
     border: none;
     color: white;
     font-size: 20px;
     padding: 5px 10px;
-    width: 200px;
+    width: 400px;
+    font-weight: 800;
 }
 
 .taskapp-form-input {
