--- a/app/assets/stylesheets/view-all.css
+++ b/app/assets/stylesheets/view-all.css
@@ -33,3 +33,13 @@
     background-color: rgb(39, 35, 35);
     color: rgb(243, 234, 234);
 }
+
+.view-all-filter {
+    background-color: rgb(61, 18, 61);
+    color: white;
+    font-family: 'Poppins', sans-serif; 
+    font-size: 16px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: 100px;
+}
