--- a/app/assets/stylesheets/createaccount.css
+++ b/app/assets/stylesheets/createaccount.css
@@ -28,3 +28,19 @@
     padding: 10px;
     border-radius: 5px;
 }
+
+.signup-label {
+    font-weight: 800;
+}
+
+.signup-button {
+    background-color: rgb(63, 19, 104);
+    width: 150px;
+    height: 50px;
+    padding: 10px 10px;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+}
